# rapidsnark

./: .gitignore  .gitmodules  build_gmp.sh  meson.build  package-lock.json
src/: CMakeLists.txt  binfile_utils.cpp  curve.cpp  curve.hpp  f2field.cpp  fft.cpp  fullprover.cpp  groth16.cpp  groth16.hpp  meson.build  multiexp.cpp  prover.cpp  test_main.cpp
